--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       }
 
       // 送信処理（Google Apps Script連携URLをここに設定）
-      fetch('https://script.google.com/a/macros/carseven.jp/s/AKfycbxZCRf7sHuW7J4n9eYig73AZm-x3YfQWSu_hLDzMuWLSuj6WTDE7lerlFHAlWmNgQQIZA/exec', {
+      fetch('https://script.google.com/macros/s/AKfycbxV9YfU6lh0hBTacbpR-41w9nnmUUtPD0hmmlwxDfJcUDpLKRpRvoAkHab8g7Pmb1okMg/exec', {
         method: 'POST',
         body: JSON.stringify(data)
       })
