--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 </head>
 <body>
 
-  <img src="カーセブンのロゴ.png" alt="カーセブンロゴ" class="logo">
+  <img src="カーセブン新タグライン_背景なし.png" alt="カーセブンロゴ" class="logo">
+
   <h1>カーセブンいわき店 査定依頼フォーム</h1>
 
   <form id="sateiForm">
