--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
 
-  <img src="カーセブン新タグライン_背景なし.png" alt="カーセブンロゴ" class="logo">
+  <img src="a.png" alt="カーセブンロゴ" class="logo">
 
   <h1>カーセブンいわき店 査定依頼フォーム</h1>
 
