--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </style>
 </head>
 <body>
-　 <img src="a.png" alt="カーセブンロゴ" class="logo">
+　 <img src="a.png" alt="カーセブンロゴ" class="logo" style="width: 400px;">
 
    <h1>カーセブンいわき店 査定依頼フォーム</h1>
 
