--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         other: form.other.value
       };
 
-      fetch('https://script.google.com/macros/s/あなたのGASデプロイURL/exec', {
+      fetch('https://script.google.com/macros/s/AKfycbygI17qQp0pn_Au4hTiQ-_npvgzj70vu1rTn2OMo7PS07GbjZzOgTWiHsby1xG4zvB-NQ/exec', {
         method: 'POST',
         body: JSON.stringify(data)
       })
