--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       background-color: #b71c1c;
     }
     .logo {
-      width: 200px;
+      width: 400px;
       margin-bottom: 20px;
     }
     .pdf-frame {
@@ -48,9 +48,10 @@
   </style>
 </head>
 <body>
-　 <img src="a.png" alt="カーセブンロゴ" class="logo" style="width: 400px;">
 
-   <h1>カーセブンいわき店 査定依頼フォーム</h1>
+  <img src="./a.png" alt="カーセブンロゴ" class="logo">
+
+  <h1>カーセブンいわき店 査定依頼フォーム</h1>
 
   <form id="sateiForm">
     <label>お名前（必須）</label>
@@ -66,45 +67,31 @@
     <input type="date" name="date1" required>
     <select name="time1" required>
       <option value="">-- 時間を選択 --</option>
-      <option>10:00</option>
-       <option>10:30</option>
-      <option>11:00</option>
-       <option>11:30</option>
-       <option>12:00</option>
-       <option>12:30</option>
-      <option>13:00</option>
-       <option>13:30</option>
-       <option>14:00</option>
-       <option>14:30</option>
-       <option>15:00</option>
-      <option>15:30</option>
-      <option>16:00</option>
-       <option>16:30</option>
-       <option>17:00</option>
-       <option>17:30</option>
-       <option>18:00</option>
+      <option>10:00</option><option>10:30</option>
+      <option>11:00</option><option>11:30</option>
+      <option>12:00</option><option>12:30</option>
+      <option>13:00</option><option>13:30</option>
+      <option>14:00</option><option>14:30</option>
+      <option>15:00</option><option>15:30</option>
+      <option>16:00</option><option>16:30</option>
+      <option>17:00</option><option>17:30</option>
+      <option>18:00</option>
     </select>
 
     <label>希望日時②（任意）</label>
     <input type="date" name="date2">
     <select name="time2">
       <option value="">-- 時間を選択 --</option>
-      <option>10:00</option>
-      <option>11:00</option>
-      <option>13:00</option>
-      <option>14:00</option>
-      <option>15:00</option>
+      <option>10:00</option><option>11:00</option>
+      <option>13:00</option><option>14:00</option><option>15:00</option>
     </select>
 
     <label>希望日時③（任意）</label>
     <input type="date" name="date3">
     <select name="time3">
       <option value="">-- 時間を選択 --</option>
-      <option>10:00</option>
-      <option>11:00</option>
-      <option>13:00</option>
-      <option>14:00</option>
-      <option>15:00</option>
+      <option>10:00</option><option>11:00</option>
+      <option>13:00</option><option>14:00</option><option>15:00</option>
     </select>
 
     <label>その他ご要望（任意）</label>
@@ -134,23 +121,4 @@
       };
 
       fetch('https://script.google.com/macros/s/AKfycbygI17qQp0pn_Au4hTiQ-_npvgzj70vu1rTn2OMo7PS07GbjZzOgTWiHsby1xG4zvB-NQ/exec', {
-        method: 'POST',
-        body: JSON.stringify(data)
-      })
-      .then(res => res.json())
-      .then(res => {
-        if (res.result === 'success') {
-          alert("ありがとうございます！受付が完了いたしました。営業時間内に店舗よりご連絡をさせていただきますので、しばらくお待ちください。");
-          form.reset();
-        } else {
-          alert("送信に失敗しました。");
-        }
-      })
-      .catch(() => {
-        alert("送信に失敗しました。");
-      });
-    });
-  </script>
-
-</body>
-</html>
+        method: '
