--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       background-color: #b71c1c;
     }
     .logo {
-      width: 400px;
+      width: 400px; /* 2倍サイズに調整 */
       margin-bottom: 20px;
     }
     .pdf-frame {
@@ -49,7 +49,7 @@
 </head>
 <body>
 
-  <img src="./a.png" alt="カーセブンロゴ" class="logo">
+  <img src="a.png" alt="カーセブンロゴ" class="logo">
 
   <h1>カーセブンいわき店 査定依頼フォーム</h1>
 
@@ -67,14 +67,22 @@
     <input type="date" name="date1" required>
     <select name="time1" required>
       <option value="">-- 時間を選択 --</option>
-      <option>10:00</option><option>10:30</option>
-      <option>11:00</option><option>11:30</option>
-      <option>12:00</option><option>12:30</option>
-      <option>13:00</option><option>13:30</option>
-      <option>14:00</option><option>14:30</option>
-      <option>15:00</option><option>15:30</option>
-      <option>16:00</option><option>16:30</option>
-      <option>17:00</option><option>17:30</option>
+      <option>10:00</option>
+      <option>10:30</option>
+      <option>11:00</option>
+      <option>11:30</option>
+      <option>12:00</option>
+      <option>12:30</option>
+      <option>13:00</option>
+      <option>13:30</option>
+      <option>14:00</option>
+      <option>14:30</option>
+      <option>15:00</option>
+      <option>15:30</option>
+      <option>16:00</option>
+      <option>16:30</option>
+      <option>17:00</option>
+      <option>17:30</option>
       <option>18:00</option>
     </select>
 
@@ -82,16 +90,46 @@
     <input type="date" name="date2">
     <select name="time2">
       <option value="">-- 時間を選択 --</option>
-      <option>10:00</option><option>11:00</option>
-      <option>13:00</option><option>14:00</option><option>15:00</option>
+     <option>10:00</option>
+      <option>10:30</option>
+      <option>11:00</option>
+      <option>11:30</option>
+      <option>12:00</option>
+      <option>12:30</option>
+      <option>13:00</option>
+      <option>13:30</option>
+      <option>14:00</option>
+      <option>14:30</option>
+      <option>15:00</option>
+      <option>15:30</option>
+      <option>16:00</option>
+      <option>16:30</option>
+      <option>17:00</option>
+      <option>17:30</option>
+      <option>18:00</option>
     </select>
 
     <label>希望日時③（任意）</label>
     <input type="date" name="date3">
     <select name="time3">
       <option value="">-- 時間を選択 --</option>
-      <option>10:00</option><option>11:00</option>
-      <option>13:00</option><option>14:00</option><option>15:00</option>
+      <option>10:00</option>
+      <option>10:30</option>
+      <option>11:00</option>
+      <option>11:30</option>
+      <option>12:00</option>
+      <option>12:30</option>
+      <option>13:00</option>
+      <option>13:30</option>
+      <option>14:00</option>
+      <option>14:30</option>
+      <option>15:00</option>
+      <option>15:30</option>
+      <option>16:00</option>
+      <option>16:30</option>
+      <option>17:00</option>
+      <option>17:30</option>
+      <option>18:00</option>
     </select>
 
     <label>その他ご要望（任意）</label>
@@ -120,5 +158,27 @@
         other: form.other.value
       };
 
-      fetch('https://script.google.com/macros/s/AKfycbygI17qQp0pn_Au4hTiQ-_npvgzj70vu1rTn2OMo7PS07GbjZzOgTWiHsby1xG4zvB-NQ/exec', {
-        method: '
+      fetch('https://script.google.com/macros/s/AKfycbxA-KjEb26SnQjheZakYapmela3w1b3xoG9lPOQ5aFHOUr6oZTUpNfPsHwIRT2EBFmSSg/exec', {
+        method: 'POST',
+        headers: {
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify({ contents: data })
+      })
+      .then(res => res.json())
+      .then(res => {
+        if (res.result === 'success') {
+          alert("ありがとうございます！受付が完了いたしました。営業時間内に店舗よりご連絡をさせていただきますので、しばらくお待ちください。");
+          form.reset();
+        } else {
+          alert("送信に失敗しました。");
+        }
+      })
+      .catch(() => {
+        alert("送信に失敗しました。");
+      });
+    });
+  </script>
+
+</body>
+</html>
