--- a/index.html
+++ b/index.html
@@ -67,30 +67,36 @@
     <input type="date" name="date1" required>
     <select name="time1" required>
       <option value="">-- 時間を選択 --</option>
-      <option>10:00</option><option>10:30</option><option>11:00</option><option>11:30</option>
-      <option>12:00</option><option>12:30</option><option>13:00</option><option>13:30</option>
-      <option>14:00</option><option>14:30</option><option>15:00</option><option>15:30</option>
-      <option>16:00</option><option>16:30</option><option>17:00</option><option>17:30</option><option>18:00</option>
+      <option>10:00</option><option>10:30</option><option>11:00</option>
+      <option>11:30</option><option>12:00</option><option>12:30</option>
+      <option>13:00</option><option>13:30</option><option>14:00</option>
+      <option>14:30</option><option>15:00</option><option>15:30</option>
+      <option>16:00</option><option>16:30</option><option>17:00</option>
+      <option>17:30</option><option>18:00</option>
     </select>
 
     <label>希望日時②（任意）</label>
     <input type="date" name="date2">
     <select name="time2">
       <option value="">-- 時間を選択 --</option>
-      <option>10:00</option><option>10:30</option><option>11:00</option><option>11:30</option>
-      <option>12:00</option><option>12:30</option><option>13:00</option><option>13:30</option>
-      <option>14:00</option><option>14:30</option><option>15:00</option><option>15:30</option>
-      <option>16:00</option><option>16:30</option><option>17:00</option><option>17:30</option><option>18:00</option>
+      <option>10:00</option><option>10:30</option><option>11:00</option>
+      <option>11:30</option><option>12:00</option><option>12:30</option>
+      <option>13:00</option><option>13:30</option><option>14:00</option>
+      <option>14:30</option><option>15:00</option><option>15:30</option>
+      <option>16:00</option><option>16:30</option><option>17:00</option>
+      <option>17:30</option><option>18:00</option>
     </select>
 
     <label>希望日時③（任意）</label>
     <input type="date" name="date3">
     <select name="time3">
       <option value="">-- 時間を選択 --</option>
-      <option>10:00</option><option>10:30</option><option>11:00</option><option>11:30</option>
-      <option>12:00</option><option>12:30</option><option>13:00</option><option>13:30</option>
-      <option>14:00</option><option>14:30</option><option>15:00</option><option>15:30</option>
-      <option>16:00</option><option>16:30</option><option>17:00</option><option>17:30</option><option>18:00</option>
+      <option>10:00</option><option>10:30</option><option>11:00</option>
+      <option>11:30</option><option>12:00</option><option>12:30</option>
+      <option>13:00</option><option>13:30</option><option>14:00</option>
+      <option>14:30</option><option>15:00</option><option>15:30</option>
+      <option>16:00</option><option>16:30</option><option>17:00</option>
+      <option>17:30</option><option>18:00</option>
     </select>
 
     <label>その他ご要望（任意）</label>
@@ -119,12 +125,12 @@
         other: form.other.value
       };
 
-      fetch('https://script.google.com/macros/s/AKfycbyz5u541PUjB6_lyLcmYyuEcNv8Kl1cCZ6saA1bUlhlmDbu73bZUkZQfRoe61PnJeMa1A/exec', {
+      fetch('https://script.google.com/macros/s/AKfycbyjmXOlYzCIy0OyF7gmFEguf3AOMtyGUevU4PPo880y8omtM-vLojqz3wqbIckggDcQGw/exec', {
         method: 'POST',
         headers: {
           "Content-Type": "application/json"
         },
-        body: JSON.stringify({ contents: data })
+        body: JSON.stringify({ contents: data })  // GAS側は e.postData.contents で受け取る
       })
       .then(res => res.json())
       .then(res => {
