--- a/index.html
+++ b/index.html
@@ -1,149 +1,108 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>カーセブンいわき店 査定依頼フォーム</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
-    body {
-      font-family: sans-serif;
-      padding: 20px;
-      background: #fff8e1;
-      color: #333;
-    }
-    h1 {
-      color: #d32f2f;
-      margin-bottom: 20px;
-    }
-    label {
-      display: block;
-      margin-top: 15px;
-      font-weight: bold;
-    }
-    input, select, textarea, button {
-      width: 100%;
-      padding: 10px;
-      margin-top: 5px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-    button {
-      background-color: #d32f2f;
-      color: white;
-      font-weight: bold;
-      cursor: pointer;
-      margin-top: 20px;
-    }
-    button:hover {
-      background-color: #b71c1c;
-    }
-    .logo {
-      width: 400px;
-      margin-bottom: 20px;
-    }
-    .pdf-frame {
-      margin-top: 40px;
-      border: 2px solid #ccc;
-    }
+    body { font-family: sans-serif; padding: 20px; max-width: 600px; margin: auto; background: #fff8e1; }
+    input, textarea, select { width: 100%; padding: 8px; margin: 8px 0; border: 1px solid #ccc; border-radius: 4px; }
+    button { padding: 10px 20px; background: #d32f2f; color: white; border: none; border-radius: 4px; font-weight: bold; }
+    button:hover { background-color: #b71c1c; }
+    .logo { width: 400px; margin-bottom: 20px; }
   </style>
 </head>
 <body>
 
   <img src="a.png" alt="カーセブンロゴ" class="logo">
 
-  <h1>カーセブンいわき店 査定依頼フォーム</h1>
-
+  <h1>査定依頼フォーム</h1>
   <form id="sateiForm">
-    <label>お名前（必須）</label>
-    <input type="text" name="name" required>
+    <label>お名前</label>
+    <input type="text" name="name" required />
 
-    <label>電話番号（必須）</label>
-    <input type="tel" name="phone" required>
+    <label>電話番号</label>
+    <input type="tel" name="phone" required />
 
-    <label>車種（必須）</label>
-    <input type="text" name="car" required>
+    <label>車種</label>
+    <input type="text" name="car" required />
 
-    <label>希望日時①（必須）</label>
-    <input type="date" name="date1" required>
+    <label>希望日時 1</label>
+    <input type="date" name="date1" required />
     <select name="time1" required>
       <option value="">-- 時間を選択 --</option>
-      <option>10:00</option><option>10:30</option><option>11:00</option>
-      <option>11:30</option><option>12:00</option><option>12:30</option>
-      <option>13:00</option><option>13:30</option><option>14:00</option>
-      <option>14:30</option><option>15:00</option><option>15:30</option>
-      <option>16:00</option><option>16:30</option><option>17:00</option>
-      <option>17:30</option><option>18:00</option>
+      <option>10:00</option><option>10:30</option><option>11:00</option><option>11:30</option>
+      <option>12:00</option><option>12:30</option><option>13:00</option><option>13:30</option>
+      <option>14:00</option><option>14:30</option><option>15:00</option><option>15:30</option>
+      <option>16:00</option><option>16:30</option><option>17:00</option><option>17:30</option>
+      <option>18:00</option>
     </select>
 
-    <label>希望日時②（任意）</label>
-    <input type="date" name="date2">
+    <label>希望日時 2</label>
+    <input type="date" name="date2" />
     <select name="time2">
       <option value="">-- 時間を選択 --</option>
-      <option>10:00</option><option>10:30</option><option>11:00</option>
-      <option>11:30</option><option>12:00</option><option>12:30</option>
-      <option>13:00</option><option>13:30</option><option>14:00</option>
-      <option>14:30</option><option>15:00</option><option>15:30</option>
-      <option>16:00</option><option>16:30</option><option>17:00</option>
-      <option>17:30</option><option>18:00</option>
+      <option>10:00</option><option>11:00</option><option>13:00</option><option>14:00</option><option>15:00</option>
     </select>
 
-    <label>希望日時③（任意）</label>
-    <input type="date" name="date3">
+    <label>希望日時 3</label>
+    <input type="date" name="date3" />
     <select name="time3">
       <option value="">-- 時間を選択 --</option>
-      <option>10:00</option><option>10:30</option><option>11:00</option>
-      <option>11:30</option><option>12:00</option><option>12:30</option>
-      <option>13:00</option><option>13:30</option><option>14:00</option>
-      <option>14:30</option><option>15:00</option><option>15:30</option>
-      <option>16:00</option><option>16:30</option><option>17:00</option>
-      <option>17:30</option><option>18:00</option>
+      <option>10:00</option><option>11:00</option><option>13:00</option><option>14:00</option><option>15:00</option>
     </select>
 
-    <label>その他ご要望（任意）</label>
+    <label>その他ご要望</label>
     <textarea name="other" rows="4"></textarea>
 
     <button type="submit">送信する</button>
   </form>
 
-  <iframe src="安心宣言Ver3.0.pdf" width="100%" height="600px" class="pdf-frame"></iframe>
+  <p id="result"></p>
 
   <script>
-    document.getElementById('sateiForm').addEventListener('submit', function(e) {
+    const form = document.getElementById('sateiForm');
+    form.addEventListener('submit', e => {
       e.preventDefault();
+      const formData = new FormData(form);
+      const data = {};
+      formData.forEach((value, key) => (data[key] = value));
 
-      const form = e.target;
-      const data = {
-        name: form.name.value,
-        phone: form.phone.value,
-        car: form.car.value,
-        date1: form.date1.value,
-        time1: form.time1.value,
-        date2: form.date2.value,
-        time2: form.time2.value,
-        date3: form.date3.value,
-        time3: form.time3.value,
-        other: form.other.value
+      // 日付バリデーション（水曜NG、10:00〜18:30の30分単位）
+      const validate = (dateStr, timeStr) => {
+        if (!dateStr || !timeStr) return true;
+        const dt = new Date(dateStr + 'T' + timeStr);
+        const day = dt.getDay(); // 0:日, 3:水, 6:土
+        const hour = dt.getHours();
+        const minute = dt.getMinutes();
+        if (day === 3) return false;
+        if (hour < 10 || hour > 18 || (hour === 18 && minute > 30)) return false;
+        if (minute !== 0 && minute !== 30) return false;
+        return true;
       };
 
-      fetch('https://script.google.com/macros/s/AKfycbyjmXOlYzCIy0OyF7gmFEguf3AOMtyGUevU4PPo880y8omtM-vLojqz3wqbIckggDcQGw/exec', {
+      if (
+        !validate(data.date1, data.time1) ||
+        !validate(data.date2, data.time2) ||
+        !validate(data.date3, data.time3)
+      ) {
+        alert('希望日時は水曜以外の10:00〜18:30、30分単位で選択してください。');
+        return;
+      }
+
+      fetch('https://script.google.com/macros/s/あなたのデプロイURL/exec', {
         method: 'POST',
         headers: {
           "Content-Type": "application/json"
         },
-        body: JSON.stringify({ contents: data })  // GAS側は e.postData.contents で受け取る
+        body: JSON.stringify(data)
       })
-      .then(res => res.json())
-      .then(res => {
-        if (res.result === 'success') {
-          alert("ありがとうございます！受付が完了いたしました。営業時間内に店舗よりご連絡をさせていただきますので、しばらくお待ちください。");
+        .then(res => res.text())
+        .then(txt => {
           form.reset();
-        } else {
-          alert("送信に失敗しました。");
-        }
-      })
-      .catch(() => {
-        alert("送信に失敗しました。");
-      });
+          document.getElementById('result').innerText = '送信が完了しました！ありがとうございます。';
+        })
+        .catch(err => alert('送信に失敗しました。'));
     });
   </script>
 
