--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         return;
       }
 
-      fetch('https://script.google.com/macros/s/あなたのデプロイURL/exec', {
+      fetch('https://script.google.com/macros/s/AKfycbzTGUSF5mY1EPe7QR1942ST7riMnSRNj_b1Xp4zhukj6dWDGN7yV6FE7sv2JwJaKQ_x/exec', {
         method: 'POST',
         headers: {
           "Content-Type": "application/json"
