--- a/index.html
+++ b/index.html
@@ -1,110 +1,36 @@
 <!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8" />
-  <title>カーセブンいわき店 査定依頼フォーム</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <style>
-    body { font-family: sans-serif; padding: 20px; max-width: 600px; margin: auto; background: #fff8e1; }
-    input, textarea, select { width: 100%; padding: 8px; margin: 8px 0; border: 1px solid #ccc; border-radius: 4px; }
-    button { padding: 10px 20px; background: #d32f2f; color: white; border: none; border-radius: 4px; font-weight: bold; }
-    button:hover { background-color: #b71c1c; }
-    .logo { width: 400px; margin-bottom: 20px; }
-  </style>
-</head>
-<body>
-
-  <img src="a.png" alt="カーセブンロゴ" class="logo">
-
-  <h1>査定依頼フォーム</h1>
-  <form id="sateiForm">
-    <label>お名前</label>
-    <input type="text" name="name" required />
-
-    <label>電話番号</label>
-    <input type="tel" name="phone" required />
-
-    <label>車種</label>
-    <input type="text" name="car" required />
-
-    <label>希望日時 1</label>
-    <input type="date" name="date1" required />
-    <select name="time1" required>
-      <option value="">-- 時間を選択 --</option>
-      <option>10:00</option><option>10:30</option><option>11:00</option><option>11:30</option>
-      <option>12:00</option><option>12:30</option><option>13:00</option><option>13:30</option>
-      <option>14:00</option><option>14:30</option><option>15:00</option><option>15:30</option>
-      <option>16:00</option><option>16:30</option><option>17:00</option><option>17:30</option>
-      <option>18:00</option>
-    </select>
-
-    <label>希望日時 2</label>
-    <input type="date" name="date2" />
-    <select name="time2">
-      <option value="">-- 時間を選択 --</option>
-      <option>10:00</option><option>11:00</option><option>13:00</option><option>14:00</option><option>15:00</option>
-    </select>
-
-    <label>希望日時 3</label>
-    <input type="date" name="date3" />
-    <select name="time3">
-      <option value="">-- 時間を選択 --</option>
-      <option>10:00</option><option>11:00</option><option>13:00</option><option>14:00</option><option>15:00</option>
-    </select>
-
-    <label>その他ご要望</label>
-    <textarea name="other" rows="4"></textarea>
-
-    <button type="submit">送信する</button>
-  </form>
-
-  <p id="result"></p>
-
-  <script>
-    const form = document.getElementById('sateiForm');
-    form.addEventListener('submit', e => {
-      e.preventDefault();
-      const formData = new FormData(form);
-      const data = {};
-      formData.forEach((value, key) => (data[key] = value));
-
-      // 日付バリデーション（水曜NG、10:00〜18:30の30分単位）
-      const validate = (dateStr, timeStr) => {
-        if (!dateStr || !timeStr) return true;
-        const dt = new Date(dateStr + 'T' + timeStr);
-        const day = dt.getDay(); // 0:日, 3:水, 6:土
-        const hour = dt.getHours();
-        const minute = dt.getMinutes();
-        if (day === 3) return false;
-        if (hour < 10 || hour > 18 || (hour === 18 && minute > 30)) return false;
-        if (minute !== 0 && minute !== 30) return false;
-        return true;
-      };
-
-      if (
-        !validate(data.date1, data.time1) ||
-        !validate(data.date2, data.time2) ||
-        !validate(data.date3, data.time3)
-      ) {
-        alert('希望日時は水曜以外の10:00〜18:30、30分単位で選択してください。');
-        return;
-      }
-
-      fetch('https://script.google.com/macros/s/AKfycbzTGUSF5mY1EPe7QR1942ST7riMnSRNj_b1Xp4zhukj6dWDGN7yV6FE7sv2JwJaKQ_x/exec', {
-        method: 'POST',
-        headers: {
-          "Content-Type": "application/json"
-        },
-        body: JSON.stringify(data)
-      })
-        .then(res => res.text())
-        .then(txt => {
-          form.reset();
-          document.getElementById('result').innerText = '送信が完了しました！ありがとうございます。';
-        })
-        .catch(err => alert('送信に失敗しました。'));
-    });
-  </script>
-
-</body>
+<html>
+  <head>
+    <base target="_top">
+  </head>
+  <body>
+    <form id="sateiForm">
+      <label>お名前: <input name="name" required></label><br>
+      <label>電話番号: <input name="phone" required></label><br>
+      <label>車種: <input name="car" required></label><br>
+      <label>希望日時①: <input name="date1" type="date" required> <input name="time1" type="time" required></label><br>
+      <label>希望日時②: <input name="date2" type="date"> <input name="time2" type="time"></label><br>
+      <label>希望日時③: <input name="date3" type="date"> <input name="time3" type="time"></label><br>
+      <label>その他ご要望: <textarea name="other"></textarea></label><br>
+      <input type="submit" value="送信">
+    </form>
+    <div id="status"></div>
+    
+    <script>
+      const form = document.getElementById("sateiForm");
+      form.addEventListener("submit", (e) => {
+        e.preventDefault();
+        const formData = Object.fromEntries(new FormData(form).entries());
+        google.script.run
+          .withSuccessHandler(() => {
+            document.getElementById("status").innerText = "送信が完了しました！";
+            form.reset();
+          })
+          .withFailureHandler(() => {
+            document.getElementById("status").innerText = "送信に失敗しました。";
+          })
+          .submitForm(formData);
+      });
+    </script>
+  </body>
 </html>
