--- a/index.html
+++ b/index.html
@@ -1,36 +1,119 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <base target="_top">
-  </head>
-  <body>
-    <form id="sateiForm">
-      <label>お名前: <input name="name" required></label><br>
-      <label>電話番号: <input name="phone" required></label><br>
-      <label>車種: <input name="car" required></label><br>
-      <label>希望日時①: <input name="date1" type="date" required> <input name="time1" type="time" required></label><br>
-      <label>希望日時②: <input name="date2" type="date"> <input name="time2" type="time"></label><br>
-      <label>希望日時③: <input name="date3" type="date"> <input name="time3" type="time"></label><br>
-      <label>その他ご要望: <textarea name="other"></textarea></label><br>
-      <input type="submit" value="送信">
-    </form>
-    <div id="status"></div>
-    
-    <script>
-      const form = document.getElementById("sateiForm");
-      form.addEventListener("submit", (e) => {
-        e.preventDefault();
-        const formData = Object.fromEntries(new FormData(form).entries());
-        google.script.run
-          .withSuccessHandler(() => {
-            document.getElementById("status").innerText = "送信が完了しました！";
+<html lang="ja">
+<head>
+  <meta charset="UTF-8" />
+  <title>カーセブンいわき店 査定依頼フォーム</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <style>
+    body { font-family: sans-serif; padding: 20px; max-width: 600px; margin: auto; background: #fff8e1; }
+    input, textarea, select { width: 100%; padding: 8px; margin: 8px 0; border-radius: 4px; border: 1px solid #ccc; }
+    button { padding: 10px 20px; background: #d32f2f; color: white; border: none; border-radius: 4px; font-weight: bold; }
+    button:hover { background-color: #b71c1c; }
+    .logo { width: 400px; margin-bottom: 20px; }
+  </style>
+</head>
+<body>
+
+  <img src="a.png" alt="カーセブンロゴ" class="logo" />
+
+  <h1>査定依頼フォーム</h1>
+  <form id="sateiForm">
+    <label>お名前</label>
+    <input type="text" name="name" required />
+
+    <label>電話番号</label>
+    <input type="tel" name="phone" required />
+
+    <label>車種</label>
+    <input type="text" name="car" required />
+
+    <label>希望日時 1</label>
+    <input type="date" name="date1" required />
+    <select name="time1" required>
+      <option value="">-- 時間を選択 --</option>
+      <option>10:00</option><option>10:30</option><option>11:00</option><option>11:30</option>
+      <option>12:00</option><option>12:30</option><option>13:00</option><option>13:30</option>
+      <option>14:00</option><option>14:30</option><option>15:00</option><option>15:30</option>
+      <option>16:00</option><option>16:30</option><option>17:00</option><option>17:30</option>
+      <option>18:00</option>
+    </select>
+
+    <label>希望日時 2</label>
+    <input type="date" name="date2" />
+    <select name="time2">
+      <option value="">-- 時間を選択 --</option>
+      <option>10:00</option><option>10:30</option><option>11:00</option><option>11:30</option>
+      <option>12:00</option><option>12:30</option><option>13:00</option><option>13:30</option>
+      <option>14:00</option><option>14:30</option><option>15:00</option><option>15:30</option>
+      <option>16:00</option><option>16:30</option><option>17:00</option><option>17:30</option>
+      <option>18:00</option>
+    </select>
+
+    <label>希望日時 3</label>
+    <input type="date" name="date3" />
+    <select name="time3">
+      <option value="">-- 時間を選択 --</option>
+      <option>10:00</option><option>10:30</option><option>11:00</option><option>11:30</option>
+      <option>12:00</option><option>12:30</option><option>13:00</option><option>13:30</option>
+      <option>14:00</option><option>14:30</option><option>15:00</option><option>15:30</option>
+      <option>16:00</option><option>16:30</option><option>17:00</option><option>17:30</option>
+      <option>18:00</option>
+    </select>
+
+    <label>その他ご要望</label>
+    <textarea name="other" rows="4"></textarea>
+
+    <button type="submit">送信する</button>
+  </form>
+
+  <p id="result"></p>
+
+  <script>
+    const form = document.getElementById('sateiForm');
+    form.addEventListener('submit', e => {
+      e.preventDefault();
+      const formData = new FormData(form);
+      const data = {};
+      formData.forEach((value, key) => (data[key] = value));
+
+      // 水曜と時間帯のバリデーション
+      const validate = (date, time) => {
+        if (!date || !time) return true;
+        const dt = new Date(`${date}T${time}`);
+        const day = dt.getDay();
+        const h = dt.getHours();
+        const m = dt.getMinutes();
+        if (day === 3) return false;
+        if (h < 10 || (h === 18 && m > 30) || h > 18) return false;
+        if (![0, 30].includes(m)) return false;
+        return true;
+      };
+
+      if (![1,2,3].every(i => validate(data[`date${i}`], data[`time${i}`]))) {
+        alert('希望日時は水曜以外の10:00〜18:30、30分単位で選択してください。');
+        return;
+      }
+
+      fetch("https://script.google.com/macros/s/あなたのGASデプロイURL/exec", {
+        method: 'POST',
+        headers: {
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify({ contents: data })
+      })
+        .then(res => res.json())
+        .then(res => {
+          if (res.result === 'success') {
+            alert("ありがとうございます！受付が完了いたしました。");
             form.reset();
-          })
-          .withFailureHandler(() => {
-            document.getElementById("status").innerText = "送信に失敗しました。";
-          })
-          .submitForm(formData);
-      });
-    </script>
-  </body>
+          } else {
+            alert("送信に失敗しました。");
+          }
+        })
+        .catch(err => {
+          alert("送信に失敗しました。");
+        });
+    });
+  </script>
+</body>
 </html>
