--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         return;
       }
 
-      fetch("https://script.google.com/macros/s/あなたのGASデプロイURL/exec", {
+      fetch("https://script.google.com/macros/s/AKfycbyAPYxyMXr8KQ_97KoUKg_w3TY6ZhXbQd4kvy_MepcWNDUDtPHSgKGJt5uQ-Jrv5Zvh/exec", {
         method: 'POST',
         headers: {
           "Content-Type": "application/json"
