--- a/index.html
+++ b/index.html
@@ -6,32 +6,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
   <h1>カーセブンいわき店 査定依頼フォーム</h1>
 
   <form id="sateiForm">
-    <label>お名前（必須）</label>
+    <label>お名前（必須）</label><br>
     <input type="text" name="name" required><br>
 
-    <label>電話番号（必須）</label>
+    <label>電話番号（必須）</label><br>
     <input type="tel" name="phone" required><br>
 
-    <label>車種（必須）</label>
+    <label>車種（必須）</label><br>
     <input type="text" name="car" required><br>
 
-    <label>希望日時①（必須）</label>
+    <label>希望日時①（必須）</label><br>
     <input type="date" name="date1" required>
     <input type="time" name="time1" required><br>
 
-    <label>希望日時②（任意）</label>
+    <label>希望日時②（任意）</label><br>
     <input type="date" name="date2">
     <input type="time" name="time2"><br>
 
-    <label>希望日時③（任意）</label>
+    <label>希望日時③（任意）</label><br>
     <input type="date" name="date3">
     <input type="time" name="time3"><br>
 
-    <label>その他ご要望（任意）</label>
+    <label>その他ご要望（任意）</label><br>
     <textarea name="other" rows="4"></textarea><br>
 
     <button type="submit">送信する</button>
@@ -55,9 +54,12 @@
         other: form.other.value
       };
 
-      fetch('https://script.google.com/macros/s/AKfycbzXU_XovfDhSZXzZj3yPxol5Fq_cyHEs1NP0ivcFoFw9-Oh-YBCvR76eLar3e2VwK2rhg/exec', {
+      fetch('https://script.google.com/macros/s/AKfycbyjmXOlYzCIy0OyF7gmFEguf3AOMtyGUevU4PPo880y8omtM-vLojqz3wqbIckggDcQGw/exec', {
         method: 'POST',
-        body: JSON.stringify(data)
+        headers: {
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify({ contents: data })
       })
       .then(res => res.json())
       .then(res => {
@@ -73,6 +75,5 @@
       });
     });
   </script>
-
 </body>
 </html>
